Fix z-index of loading

--- a/frontend/src/screens/styles.css
+++ b/frontend/src/screens/styles.css
@@ -518,5 +518,5 @@ input {
     background: rgba(0, 0, 0, 0.834)
         url("https://media.giphy.com/media/8agqybiK5LW8qrG3vJ/giphy.gif") center
         no-repeat;
-    z-index: 1;
+    z-index: 4;
 }
